--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,8 @@ linter:
     sort_pub_dependencies: false
     type_annotate_public_apis: false
     avoid_positional_boolean_parameters: false
+    avoid_redundant_argument_values: false
+    prefer_constructors_over_static_methods: false
 analyzer:
   strong-mode:
     implicit-casts: true
