--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
-            "name": "state_manage",
+            "name": "state_manager",
             "request": "launch",
             "type": "dart"
         },
         {
-            "name": "state_manage (profile mode)",
+            "name": "state_manager (profile mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
