--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
   flutter:
     sdk: flutter
   #date time support
-  intl: ^0.17.0 
-  
+  intl: ^0.17.0
+
   #pigeon
   pigeon: ^0.3.0
-  
+
   #UI support
   cached_network_image: ^3.0.0
 
@@ -26,7 +26,7 @@ dependencies:
   hooks_riverpod: ^0.14.0+4
   flutter_hooks: ^0.17.0
   flutter_bloc: ^7.0.1
-  
+
   #support material
   get: ^4.1.4
   stacked_services: ^0.8.10
@@ -46,17 +46,31 @@ dependencies:
 
   #sensor
   sensors_plus: ^1.0.2
-  
+
   #animation
   animations: ^2.0.1
-  
+
   #socket io
   socket_io_client: ^1.0.1
 
   #rx dart
   rxdart: ^0.27.1
-  
 
+  #url_strategy
+  url_strategy: ^0.2.0
+
+  #goolge font
+  google_fonts: ^2.1.0
+
+  #responsive web
+  responsive_framework: ^0.1.4
+
+  #inner drawer
+  flutter_inner_drawer: ^1.0.0+1
+
+  #toggle
+  toggle_switch: ^1.2.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -68,3 +82,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/icons/
